# C-Plus-Plus_Pros

./: .gitignore  README.md
File_IO/: data.xml  file_io.cpp  file_io.h  main.cpp
SVM/: README.md  compile_all_2.sh  main.cpp
basic_game_engine/: compile_all_2.sh  game.cpp  game.h  main.cpp
classification_training_opencv/: .gitignore  README.md  compile_all_2.sh  filesystem.cpp  filesystem.h  helper.cpp  helper.h  light_remover.cpp  light_remover.h  main.cpp  windows.cpp  windows.h
feature_extraction_demo/: README.md  compile_all_2.sh  helper.cpp  helper.h  main.cpp  video.cpp  video.h
finally/: CMakeLists.txt
finally/include/: includes.h  normal_window.h  util.h
finally/shaders/: fragment_shader.fs
finally/src/: entity.cpp  main.cpp
http_request/: compile_all_3.sh  main.cpp
opengl/: CMakeLists.txt
opengl/include/: buffer.h  drawing_window.h  entity.h  includes.h  opengl.h  shader.h  window.h
opengl/shaders/: fragment_shader.fs  vertex_shader.vs
opengl/src/: buffer.cpp  drawing_window.cpp  main.cpp  normal_window.cpp  opengl.cpp  shader.cpp  util.cpp  window.cpp
regex/: CMakeLists.txt
regex/include/: regular_exp.h
regex/src/: main.cpp  reguler_exp.cpp
tesseract/: image_text_reader.cpp  image_text_reader.h  main.cpp
time/: README.md  main.cpp  time.cpp  time.h
